pipelines/nifi/overlays/production-disabled/nifi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nifi
  namespace: pipelines
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nifi
  template:
    metadata:
      labels:
        app: nifi
    spec:     
      securityContext:
        sysctls:
          - name: net.ipv4.ip_local_port_range
            value: "10000 65000"
      containers:
        - name: nifi
          image: apache/nifi:2.0.0-M4
          # command: ["sh", "-c", "exit 1"]
          ports:
            - containerPort: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: nifi-web
  namespace: pipelines
spec:
  type: ClusterIP
  ports:
    - name: nifi-https
      port: 8443
      protocol: TCP
      targetPort: 8443 
  selector:
    app: nifi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nifi
  namespace: pipelines
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: nifi.contextsuite.com
      http:
        paths:
          - backend:
              service:
                name: nifi-web
                port:
                  number: 8443
            path: /nifi
            pathType: Prefix
          - backend:
              service:
                name: nifi-web
                port:
                  number: 8443
            path: /nifi-api
            pathType: Prefix
  tls:
    - hosts:
        - nifi.contextsuite.com
      secretName: nifi-contextsuite-com-tls
